# windmill

./: Cargo.toml  README.md
.github/workflows/: rust.yml
codegen/: Cargo.toml
codegen/src/: lib.rs
enzyme_macro/: Cargo.toml
enzyme_macro/src/: lib.rs
example/: custom_context.rs  default_context.rs  single_route.rs
example/example1/: Cargo.toml  README.md
example/example1/src/: main.rs  service.rs
example/microservices/user/: Cargo.toml
example/microservices/user/src/: context.rs  main.rs  message.rs  service.rs  user.rs
example/user/: Cargo.toml  package-lock.json
example/user/src/: clients.rs  context.rs  main.rs  message.rs  messages.rs  service.rs  user.rs
examples/: env.rs
examples/example1/: README.md  main.rs
src/: config.rs  context.rs  endpoint.rs  error.rs  lib.rs  main.rs  props.rs  req.rs  route.rs  router.rs  server.rs  service.rs  state.rs  util.rs
