[package]
name = "enzyme"
version = "0.1.0"
authors = ["technetos <mrgould93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-h1 = "1.0"
http-types = "1.0"
async-std = "1.5.0"
codegen = { path = "codegen" }
