[package]
name = "windmill"
version = "0.1.0"
authors = ["technetos <mrgould93@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-h1 = "1.1"
http-types = "1.1"
async-std = "1.5.0"
codegen = { path = "codegen" }

[dev-dependencies]
envy = "0.4.1"
lazy_static = "1.4.0"

[workspace]
members = ["codegen"]
