[package]
name = "enzyme_macro"
version = "0.1.0"
authors = ["technetos <mrgould93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
heck = "0.3.1"
quote = "1.0.2"
syn = { version = "1.0.5", features = ["extra-traits"] }
proc-macro2 = "1.0"
