[package]
name = "user"
version = "0.1.0"
authors = ["technetos <mrgould93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windmill = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
lazy_static = "1.4.0"
http-types = "1.1"
async-std = { git = "https://github.com/async-rs/async-std" }
