[package]
name = "user"
version = "0.1.0"
authors = ["technetos <mrgould93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#enzyme = { git = "https://github.com/technetos/enzyme" }
enzyme = { path = "../../.." }
diesel = { version = "1.4.3", features = ["postgres"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
futures-preview = { version = "=0.3.0-alpha.18", features = ["async-await", "nightly"] }
http = "0.1.18"
lazy_static = "1.4.0"
async-trait = "0.1.15"
